# webgpu-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  flake.nix  utils.cmake
glfw3webgpu/: glfw3webgpu.c
resources/: shader.wgsl
src/: CMakeLists.txt  README.md  main.cpp
webgpu/: CMakeLists.txt
webgpu/cmake/: FetchDawn.cmake
